# legaljava-agent

./: .env.backup  .env.example  .eslintrc.js  .gitignore  IMPLEMENTATION_PLAN.md  README.md  TESTING_GUIDE.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  index.js  package-lock.json  package.json  websocket-server.js  ws-package.json
backend/: build.gradle  gradlew  run_spring.bat  settings.gradle
backend/src/main/java/com/legaljava/: EventController.java  EventService.java  FileUploadController.java  FileUploadService.java  KanbanController.java  KanbanService.java  LegalJavaApplication.java  MockApiApplication.java
backend/src/main/resources/: application-local.properties
backend/src/main/resources/public/mock/: columns.json
data/legal_corpus/: license_agreement.json
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.py
infra/db/: init.sql
py-rag/: main.py  pyproject.toml  requirements.txt
scripts/: create_dirs.js  start.bat  start.sh  test-prototype.bat  test-prototype.sh
src/: index.js
src/agent/: index.js
src/legal/: retrieval.js
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.css  App.tsx  index.css  main.tsx
ui/src/components/: Analytics.tsx  CaseWorkspace.tsx  ChatInterface.tsx  Dashboard.tsx  DocumentUpload.tsx  FileDrop.css  FileDrop.tsx  Layout.tsx  WorkersCompCaseManager.tsx
ui/src/pages/: Schedule.tsx
ui/src/services/: api.ts  createEvent.ts  fetchEvents.ts
ui/src/sidebar/: ChatPanel.tsx
ui/src/types/: index.ts
(+25 files in other folders)
